--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 4000",
+    "dev:reset": "./scripts/dev-reset.sh",
+    "dev:clean": "./scripts/dev-reset.sh --clean",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
