バックアップ: スキーマ統一・検索JOIN化・A11y・設定一元化・サンプル/互換ビュー追加

--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -13,11 +13,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.2",
+    "@types/leaflet": "^1.9.20",
     "dotenv": "^17.2.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
+    "uuid": "^12.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
