--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -13,11 +13,12 @@
     "scenario:test": "node ../scripts/scenario-test.js",
     "probe:supabase": "node scripts/probe-supabase.mjs",
     "user:make-muscle-taro": "node scripts/make-me-muscle-taro.js",
-    "mcp:supabase": "node mcp/supabase-mcp-server.mjs"
+    "mcp:supabase": "node mcp/supabase-mcp-server.mjs",
+    "gen:types": "node scripts/gen-types.mjs"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.2",
     "@modelcontextprotocol/sdk": "^1.2.0",
+    "@supabase/supabase-js": "^2.57.2",
     "@types/leaflet": "^1.9.20",
     "dotenv": "^17.2.2",
     "leaflet": "^1.9.4",
@@ -36,7 +37,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "openapi-typescript": "^6.7.6",
     "puppeteer": "^24.19.0",
+    "swagger2openapi": "^7.0.8",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
