バックアップ: v2.5.0 - 認証コールバックページの更新と施設管理者申請機能の追加

--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "dev:reset": "./scripts/dev-reset.sh",
     "dev:clean": "./scripts/dev-reset.sh --clean",
     "build": "next build",
@@ -34,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "puppeteer": "^23"
   }
 }
