リファクタリング準備: package.jsonにスクリプト追加とプロジェクト保護システム設定

--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -9,6 +9,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "typecheck": "tsc --noEmit --skipLibCheck",
+    "backup": "../scripts/auto-backup.sh",
+    "safe-commit": "../scripts/auto-backup.sh && git add -A && git commit",
     "system:test": "node ../scripts/system-test.js",
     "scenario:test": "node ../scripts/scenario-test.js",
     "gen:types": "node scripts/gen-types.mjs"
