全体リファクタリング完了: 型定義統一、コンポーネント整理、重複削除、パフォーマンス最適化
🎯 主な改善点:
- 統一された型定義システム (src/types/)
- 新しいコンポーネント構造 (UI/Map/Forms)
- 重複コードの削除とベースコンポーネント化
- カスタムフック追加 (useDebounce, useAsync, useLocalStorage)
- ユーティリティ関数の統一 (src/lib/utils/)
- TypeScriptエラーゼロ達成

✨ 今後の開発効率と保守性が大幅に向上

--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.2",
     "@types/leaflet": "^1.9.20",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
@@ -26,6 +27,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^12.0.0"
   },
   "devDependencies": {
@@ -36,8 +38,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "puppeteer": "^23",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "puppeteer": "^23"
+    "typescript": "^5"
   }
 }
