バックアップ: v3.6.0 - ストーリー画像生成機能改善とロゴ実装
- ジムトピアロゴをストーリー画像下部に配置
- 投稿編集モーダルに時間入力フィールド追加
- 画像削除機能のバグ修正
- ストーリー画像のデザイン最適化（フォントサイズ調整）
- 開発環境での編集・ストーリー生成ボタン表示

--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "node-fetch": "^2.7.0",
     "pg": "^8.12.0",
     "puppeteer": "^23",
     "tailwindcss": "^3.4.17",
