--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -26,17 +26,18 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.2",
     "@types/leaflet": "^1.9.20",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "10.4.21",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
-    "postcss": "^8.5.6",
+    "postcss": "8.4.49",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "3.4.17",
     "uuid": "^12.0.0"
   },
   "devDependencies": {
@@ -49,7 +50,6 @@
     "node-fetch": "^2.7.0",
     "pg": "^8.12.0",
     "puppeteer": "^23",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
