✅ ジム友機能を完全削除し、フォローシステムに統合
実施内容:
- gym_friendsテーブルとその関連機能を削除
- 相互フォロー機能をmutual_followsビューで実装
- UIの「ジム友」を「相互」に変更
- データベース関数とRLSポリシーを最適化
- TypeScriptの型定義を修正

改善点:
- システムのシンプル化（二重管理から単一管理へ）
- コードの保守性向上
- パフォーマンスの改善

--- a/gymtopia-app/package.json
+++ b/gymtopia-app/package.json
@@ -18,6 +18,7 @@
     "safe-commit": "../scripts/auto-backup.sh && git add -A && git commit",
     "system:test": "node ../scripts/system-test.js",
     "scenario:test": "node ../scripts/scenario-test.js",
+    "e2e:test": "npm run system:test && npm run scenario:test",
     "gen:types": "node scripts/gen-types.mjs",
     "db:apply:compat": "node scripts/apply-sql.js ./supabase/compat-views-safe.sql",
     "db:apply:legacy": "node scripts/apply-sql.js ./supabase/27-rename-legacy.sql",
