🔧 Vercel設定: GitHub統合を明示的に有効化

--- a/gymtopia-app/vercel.json
+++ b/gymtopia-app/vercel.json
@@ -7,5 +7,9 @@
   "env": {
     "NODE_ENV": "production",
     "FORCE_COLOR": "1"
+  },
+  "github": {
+    "enabled": true,
+    "autoAlias": true
   }
 }
